# Slouka

./: .env.example  CLAUDE.md  Makefile  README.md  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml
.github/workflows/: ci.yml  deploy.yml
bot/: .env.example  Dockerfile  Dockerfile.dev  pyproject.toml
bot/migrations/: env.py
bot/migrations/versions/: 2026_02_06_2342-8deb789984ea_init_models.py  2026_02_10_1226-4fa891e62e3e_update_card.py  2026_03_25_1917-a8e8f3bfffab_add_onboarding_completed_to_user.py  2026_03_31_1055-adf117830d08_add_notification_fields_to_user.py  2026_03_31_1759-659ee8cc58c3_add_cascade_delete_on_cards_fk.py  2026_03_31_1947-cfa3925ebc43_change_user_id_and_deck_user_id_to_.py  2026_04_06_0752-38e5915bd562_add_notification_minute_to_user.py  2026_04_06_1309-6bc0ab69f1a0_add_indexes_for_cards_and_decks.py  2026_04_06_1913-5c288c32eb10_add_unique_constraint_deck_id_word_on_.py  2026_04_08_1311-2d0ec774973b_add_streak_fields_to_user.py  2026_04_08_1728-4cc2f7cbb1e8_add_review_logs_table.py  2026_04_09_1127-5865ee548326_rename_review_logs_to_activity_logs_and_.py
bot/src/: main.py
bot/src/core/: activity.py  calendar.py  config.py  exceptions.py  plural.py  sm2.py  timezone.py
bot/src/dependencies/: bot.py  config.py  db.py  redis.py  services.py
bot/src/infra/db/: __init__.py  uow.py
bot/src/infra/db/models/: __init__.py  activity_log.py  card.py  deck.py  review_log.py  user.py
bot/src/infra/db/models/mixins/: audit.py
bot/src/infra/db/repositories/: __init__.py  activity_log.py  base.py  card.py  deck.py  review_log.py  user.py
bot/src/infra/schemas/: verbum.py
bot/src/infra/tg/: calendar.py  middlewares.py  strings.py
bot/src/infra/tg/dialogs/: __init__.py  card_display.py  common.py  deck_management.py  lookup.py  main_menu.py  onboarding.py  review.py  settings.py  states.py  stats.py
bot/src/infra/tg/handlers/: common.py  start.py
bot/src/infra/verbum/: client.py  parser.py
bot/src/services/: card.py  deck.py  notification.py  sm2.py  stats.py  user.py  verbum.py
bot/src/worker/: broker.py  tasks.py
bot/tests/: conftest.py  test_activity_log_repository.py  test_calendar.py  test_card_repository.py  test_card_service.py  test_deck_repository.py  test_deck_service.py  test_e2e.py  test_notification_task.py  test_parser.py  test_plural.py  test_review_log_repository.py  test_sm2.py  test_stats_service.py  test_streak.py  test_user_repository.py  test_user_service.py  test_verbum_service.py
