[project]
name = "slouka"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.24.0",
    "aiogram-dialog>=2.4.0",
    "alembic>=1.18.3",
    "asyncpg>=0.31.0",
    "dishka>=1.7.2",
    "greenlet>=3.3.1",
    "openai>=2.17.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyreqwest>=0.10.1",
    "sqlalchemy>=2.0.46",
]
