[project]
name = "slouka"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.24.0",
    "aiogram-dialog>=2.4.0",
    "aiohttp>=3.11.0",
    "alembic>=1.18.3",
    "asyncpg>=0.31.0",
    "dishka>=1.7.2",
    "greenlet>=3.3.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "redis>=6.0.0",
    "sqlalchemy>=2.0.46",
    "taskiq>=0.12.0",
    "taskiq-redis>=1.1.0",
    "timezonefinder>=6.5.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
extend-select = ["I"]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "C4",
]

ignore = []

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pyright]
reportUnknownMemberType = "warning"

[tool.mypy]
python_version = "3.14"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "freezegun>=1.4",
    "mypy>=1.19.1",
    "pyright>=1.1.408",
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "ruff>=0.15.7",
    "testcontainers[postgres]>=4.0",
    "watchfiles>=1.1.1",
]
